# chattcu

./: AUTO_TIMESTAMP.txt  Documento de arquitetura de software ChatTCU 4.0.docx  gerar-chattcu-cessao - GH.ps1  gerar-chattcu-cessao - GitLab.ps1  ~$cumento de arquitetura de software ChatTCU 4.0.docx
OpenAI-Azure-Service-Playground/: .env  .env.development  .env.local.sample  .env.production  .eslintrc.json  .gitignore  .prettierignore  .prettierrc.js  Dockerfile  Jenkinsfile  aad.manifest.json  babel.config.js  catalog-info.yaml  devbox.json  jest.config.js  package-lock.json  package.json  pyproject.toml  sonar-project.properties  teamsapp.local.yml  teamsapp.yml
OpenAI-Azure-Service-Playground/appPackage/: manifest.json
OpenAI-Azure-Service-Playground/cicd/: Dockerfile  main.py  requirements.txt
OpenAI-Azure-Service-Playground/env/: .env.dev  .env.homol  .env.prod
OpenAI-Azure-Service-Playground/infra/: azure.parameters.json  main.bicep
OpenAI-Azure-Service-Playground/k8s/: openai-azure-playground-frontend-deploy.yaml  openai-azure-playground-frontend-ing.yaml  openai-azure-playground-frontend-svc.yaml
OpenAI-Azure-Service-Playground/nginx/: nginx.conf
OpenAI-Azure-Service-Playground/public/: index.html  manifest.json
OpenAI-Azure-Service-Playground/public/worklets/: audio-playback-worklet.js  resampler-processor-worklet.js
OpenAI-Azure-Service-Playground/src/: App.scss  App.tsx  DarkModeToggle.scss  DarkModeToggle.tsx  browser-auth.ts  config.ts  index.scss  index.tsx  print.scss  setupProxy.js  setupTests.ts
(+581 files in other folders)
